# apopy

./: Makefile  README.md  client.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy.yaml
apopy/: __init__.py
oapy/: __init__.py
