[project]
name = "apopy"
version = "0.1.5"
description = "Simple Apollo Config Client for Python."
license = "MIT"
readme = "README.md"
authors = [
    { name = "ringsaturn", email = "ringsaturn.me@gmail.com" }
]
dependencies = [
    "httpx[socks]>=0.26.0",
]
requires-python = ">= 3.8"

[project.scripts]
# hello = "apopy:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["apopy"]
