[tool.poetry]
name = "apopy"
version = "0.1.5"
description = "Simple Apollo Config Client for Python."
authors = ["ringsaturn <ringsaturn.me@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = {extras = ["socks"], version = "^0.27.0"}

[tool.poetry.group.dev.dependencies]
ruff = ">=0.3.4,<0.5.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
