[project]
name = "apopy"
version = "0.1.6"
description = "Simple Apollo Config Client for Python."
maintainers = [{ name = "ringsaturn", email = "ringsaturn.me@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx[socks]>=0.27.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "ruff>=0.7.1"]
